@@ -1,5 +1,11 @@
 @import "tailwindcss";
 
 @plugin "daisyui" {
-  themes: light --default, dark --prefersdark, cupcake;
+  themes: light --default, dark --prefersdark;
+}
+
+@layer base {
+  body , html {
+    @apply h-svh w-svw;
+  }
 }
