@@ -30,10 +30,12 @@
     "preact": "npm:preact@^10.27.2",
     "@preact/signals": "npm:@preact/signals@^2.3.1",
     "@fresh/plugin-vite": "jsr:@fresh/plugin-vite@^1.0.4",
+    "react-icons": "npm:react-icons@^5.5.0",
     "tsx": "npm:tsx@^4.20.6",
     "vite": "npm:vite@^7.1.3",
     "tailwindcss": "npm:tailwindcss@^4.1.10",
-    "@tailwindcss/vite": "npm:@tailwindcss/vite@^4.1.12"
+    "@tailwindcss/vite": "npm:@tailwindcss/vite@^4.1.12",
+    "@std/http": "jsr:@std/http/cookie"
   },
   "compilerOptions": {
     "lib": [
