@@ -15,7 +15,7 @@ export const handler = define.handlers({
 
       const data: TelegramUpdate = await ctx.req.json().catch(() => null);
 
-      console.log(data);
+      // console.log(data);
 
       //check if there is a payload
       if (!data) throw new Error("Invalid payload");
