@@ -1,0 +1,14 @@
+import { define } from "../../../utils.ts";
+
+
+
+
+
+export default define.page(() => {
+
+    return (
+        <main class="size-full">
+            <h1>Settings</h1>
+        </main>
+    )
+})
