@@ -1,19 +1,28 @@
-import { useSignal } from "@preact/signals";
 import { Head } from "fresh/runtime";
 import { define } from "../utils.ts";
-import Counter from "../islands/Counter.tsx";
+import { page } from "fresh";
+import { getCookies } from "@std/http";
+
+export const handler = define.handlers({
+  GET: ctx => {
+
+    const cookies = getCookies(ctx.req.headers)
+
+    return page({ logged_in: !!cookies.logged_in })
+  }
+})
 
 export default define.page(function Home(ctx) {
-  const count = useSignal(3);
-
-  console.log("Shared value " + ctx.state.shared);
 
   return (
-    <div class="px-4 py-8 mx-auto min-h-screen">
+    <>
       <Head>
-        <title>Fresh counter</title>
+        <title>Adams</title>
       </Head>
-      
-    </div>
+      <div class="mx-auto min-h-screen flex items-center justify-center flex-col gap-4">
+        <h1 class="text-3xl md:text-5xl lg:text-7xl">Adams</h1>
+        <p>File sharing telegram bot</p>
+      </div>
+    </>
   );
 });
