@@ -35,3 +35,5 @@ Refactor bot webhook handling and database interactions
 - Added a new endpoint for retrieving registered channels.
 - Updated the bot registration process to include token validation and webhook setup.
 - Added a CSV file for uploaded media files and a TODO list for future enhancements.
+
+Add dashboard layout, bot management, and login functionality; refactor styles and helper functions
